Attempt to use java records instead of manually created data holders