@@ -14,8 +14,10 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
+
+		<java.version>14</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 
 		<mainClass>minsk.Main</mainClass>
 
@@ -106,7 +108,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.8.1</version>
 					<configuration>
-						<release>11</release>
+						<release>${java.version}</release>
+						<compilerArgs>--enable-preview</compilerArgs>
 					</configuration>
 				</plugin>
 				<plugin>
